--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "firebase-admin": "^13.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
